test/TestSuite/Syntax/Errors/resourceroot_leaf.tjp
project test "Test" "1.0" 2011-03-27 +2m

resource r "R"

task t "T"

resourcereport "R" {
# MARK: error 9 resourceroot_leaf
  resourceroot r
}
